# template_project

./: .gitignore  CMakeLists.txt  README  conanfile.txt  main.cpp
feature1/: CMakeLists.txt
feature1/include/: feature1.hpp
feature1/src/: CMakeLists.txt  feature1.cpp
feature2/: CMakeLists.txt  feature2.cpp
feature2/include/: feature2.hpp
feature3/: CMakeLists.txt
feature3/include/: feature3.hpp
feature3/src/: CMakeLists.txt  feature3.cpp
include/: TemplateConfig.h.in  common.hpp
src/: CMakeLists.txt  common.cpp  main.cpp
tests/: CMakeLists.txt
