# Add Feature1 source subdirectory
add_subdirectory(src)

message("feature2 dir: CMAKE_SOURCE_DIR		=	${CMAKE_SOURCE_DIR}")
message("feature2 dir: CMAKE_BINARY_DIR		=	${CMAKE_BINARY_DIR}")
message("feature2 dir: CMAKE_CURRENT_SOURCE_DIR	=	${CMAKE_CURRENT_SOURCE_DIR}")
message("feature2 dir: CMAKE_CURRENT_BINARY_DIR	=	${CMAKE_CURRENT_BINARY_DIR}")
